# hot

./: .gitignore  LICENSE  README.md  bench.sh  hot.cabal  mono-tuple.cabal  stack.yaml
base/: hot-base.cabal
base/Data/Hot/: Base.hs  Iterator.hs
bench/: Bench.hs  bench.sh  hot-bench.cabal
bench-compare/: Compare.hs  compare.cabal
bench/Data/: HotBench.hs  MonoTupleBench.hs
bench/Data/Hot/: GenericBench.hs  SortBench.hs
bench/Data/MonoTuple/: GenericBench.hs
bench/compare/: Compare.hs  stack.yaml
bench/macro/: ListBench.hs
bench/micro/: HotBench.hs  ListBench.hs  PidginBench.hs  PidginHot.hs
bench/stack/: 7.10.3-inline.yaml  7.10.3.yaml  8.0.1-inline.yaml  8.0.1.yaml
cmp/: Hot.hs  hot-cmp.cabal
generate/: Generate.hs  generate.cabal  hot-instances-src.cabal  stack.yaml
generate/app/: Base.hs  Common.hs  Foldable.hs  Main.hs
generate/inlinable/Data/Hot/: Base.hs
generate/inline/Data/Hot/: Base.hs
generate/src/: Generate.hs
instances/: hot-instances.cabal
instances/Data/Hot/: Instances.hs
instances/Data/Hot/Instances/: Base.hs  Foldable.hs
lib/Data/Hot/: Generic.hs  Internal.hs  Sort.hs
lib/classy/: hot-classy.cabal
lib/classy/Data/Hot/: Pidgin.hs
lib/classy/Data/Hot/Pidgin/: Base.hs
lib/default/: hot-default.cabal
lib/default/Data/Hot/: Generic.hs  IterativeGeneric.hs
lib/indexed/: hot-indexed.cabal
lib/indexed/Data/: Hot.hs
lib/iterative/: hot-iterative.cabal
lib/iterative/Data/Hot/: Generic.hs  Sort.hs
pidgin/Data/Hot/: Pidgin.hs
pidgin/Data/Hot/Pidgin/: Base.hs  Misc.hs
src/Data/: Hot.hs  MonoTuple.hs
src/Data/Hot/: Base.hs  Generic.hs  Iterator.hs  Sort.hs
src/Data/MonoTuple/: Base.hs  Generic.hs
test/: PidginProp.hs  Test.hs  Unit.hs
test/Data/: HotTest.hs  MonoTupleTest.hs
test/Data/Hot/: GenericTest.hs  SortTest.hs
