name:                 hot
version:              0.1.0
synopsis:             Homogeneous Tuples
description:          Please see README.md
homepage:             https://github.com/tserduke/hot
bug-reports:          https://github.com/tserduke/hot/issues
license:              BSD3
license-file:         LICENSE
author:               Taras Serduke
maintainer:           taras.serduke@gmail.com
copyright:            2016 Taras Serduke
category:             Data, Data Structures
stability:            alpha
build-type:           Simple
cabal-version:        >= 1.10

flag inline
  description:        Always inline base functions
  default:            False
  manual:             True

library
  if flag(inline)
    hs-source-dirs:   src, generate/inline
  else
    hs-source-dirs:   src, generate/inlinable
  exposed-modules:    Data.Hot
                      Data.Hot.Base
                      Data.Hot.Generic
                      Data.Hot.Sort
  other-modules:      Data.Hot.Internal
  build-depends:      base
  default-language:   Haskell2010
  default-extensions: BangPatterns
                      DataKinds
                      FlexibleContexts
                      FlexibleInstances
                      LambdaCase
                      MultiParamTypeClasses
                      MultiWayIf
                      ScopedTypeVariables
                      TupleSections
                      TypeOperators
  other-extensions:   InstanceSigs
                      KindSignatures
                      Rank2Types
                      TypeFamilies
                      UndecidableInstances
  default-extensions: DataKinds
  ghc-options:        -O2 -Wall

test-suite unit
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Unit.hs
  build-depends:      base,
                      hot,
                      hspec
  default-language:   Haskell2010
  default-extensions: DataKinds
  ghc-options:        -O2 -Wall -with-rtsopts=-K1K

benchmark native
  type:               exitcode-stdio-1.0
  hs-source-dirs:     bench/micro
  main-is:            HotBench.hs
  build-depends:      base,
                      criterion,
                      extra,
                      hot
  default-language:   Haskell2010
  default-extensions: DataKinds
  ghc-options:        -O2 -Wall

benchmark llvm-3.5
  type:               exitcode-stdio-1.0
  hs-source-dirs:     bench/micro
  main-is:            HotBench.hs
  build-depends:      base,
                      criterion,
                      extra,
                      hot
  default-language:   Haskell2010
  default-extensions: DataKinds
  ghc-options:        -O2 -Wall -fllvm -pgmlo opt-3.5 -pgmlc llc-3.5

benchmark llvm-3.7
  type:               exitcode-stdio-1.0
  hs-source-dirs:     bench/micro
  main-is:            HotBench.hs
  build-depends:      base,
                      criterion,
                      extra,
                      hot
  default-language:   Haskell2010
  default-extensions: DataKinds
  ghc-options:        -O2 -Wall -fllvm -pgmlo opt-3.7 -pgmlc llc-3.7

source-repository head
  type:     git
  location: https://github.com/tserduke/hot.git
