name:                 hot
version:              0.1.0
synopsis:             Homogeneous Tuples
description:          Please see README.md
homepage:             https://github.com/tserduke/hot
bug-reports:          https://github.com/tserduke/hot/issues
license:              BSD3
license-file:         LICENSE
author:               Taras Serduke
maintainer:           taras.serduke@gmail.com
copyright:            2016 Taras Serduke
category:             Data, Data Structures
stability:            alpha
build-type:           Simple
cabal-version:        >= 1.10
extra-source-files:   README.md

source-repository head
  type:               git
  location:           https://github.com/tserduke/hot.git
