name:                 mono-tuple
version:              0.1.0
synopsis:             Monomorphic Tuples
description:          Please see README.md
homepage:             https://github.com/tserduke/mono-tuple
bug-reports:          https://github.com/tserduke/mono-tuple/issues
license:              BSD3
license-file:         LICENSE
author:               Taras Serduke
maintainer:           taras.serduke@gmail.com
copyright:            2016 Taras Serduke
category:             Data, Data Structures
stability:            alpha
build-type:           Simple
cabal-version:        >= 1.10

library
  hs-source-dirs:     src
  exposed-modules:    Data.MonoTuple
                      Data.MonoTuple.Base
                      Data.MonoTuple.Generic
  other-modules:
  build-depends:      base
  default-language:   Haskell2010
  default-extensions: BangPatterns
                      DataKinds
                      FlexibleContexts
                      FlexibleInstances
                      LambdaCase
                      MultiParamTypeClasses
                      ScopedTypeVariables
                      TupleSections
                      TypeOperators
  other-extensions:   DeriveDataTypeable
                      FunctionalDependencies
                      KindSignatures
  ghc-options:        -O2 -Wall -fno-warn-tabs

test-suite test
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Test.hs
  other-modules:      Data.MonoTupleTest
  build-depends:      base,
                      mono-tuple,
                      tasty,
                      tasty-hunit,
                      tasty-quickcheck
  default-language:   Haskell2010
  default-extensions:
  ghc-options:        -O2 -Wall -fno-warn-tabs -with-rtsopts=-K1K

benchmark bench
  type:               exitcode-stdio-1.0
  hs-source-dirs:     bench
  main-is:            Bench.hs
  other-modules:      Data.MonoTupleBench
  build-depends:      base,
                      mono-tuple,
                      criterion
  default-language:   Haskell2010
  default-extensions: BangPatterns
                      FlexibleContexts
                      FlexibleInstances
                      KindSignatures
                      LambdaCase
                      MultiParamTypeClasses
                      ScopedTypeVariables
                      TupleSections
                      TypeOperators
  ghc-options:        -O2 -Wall -fno-warn-tabs

source-repository head
  type:     git
  location: https://github.com/tserduke/mono-tuple
