name:                 compare
version:              0.1.0
build-type:           Simple
cabal-version:        >= 1.10

executable generate-mt
  hs-source-dirs:     .
  main-is:            Compare.hs
  other-modules:
  build-depends:      base,
                      ansi-terminal,
                      bytestring,
                      boxes,
                      cassava,
                      containers,
                      directory,
                      filepath,
                      vector
  default-language:   Haskell2010
  default-extensions: BangPatterns
                      FlexibleContexts
                      FlexibleInstances
                      GeneralizedNewtypeDeriving
                      LambdaCase
                      MultiParamTypeClasses
                      ScopedTypeVariables
                      TupleSections
  ghc-options:        -O2 -Wall
