name:                 hot-bench
version:              0.1.0
build-type:           Simple
cabal-version:        >= 1.10

executable hot-bench-misc
  hs-source-dirs:     .
  main-is:            Misc.hs
  build-depends:      base,
                      criterion,
                      hot-classy
  default-language:   Haskell2010
  default-extensions: DataKinds
  ghc-options:        -O2 -Wall
