name:                 generate
version:              0.1.0
build-type:           Simple
cabal-version:        >= 1.10

executable generate
  hs-source-dirs:     .
  main-is:            Generate.hs
  other-modules:
  build-depends:      base,
                      basic-prelude,
                      do-list,
                      text
  default-language:   Haskell2010
  default-extensions: BangPatterns
                      FlexibleContexts
                      FlexibleInstances
                      GeneralizedNewtypeDeriving
                      LambdaCase
                      MultiParamTypeClasses
                      NoImplicitPrelude
                      OverloadedStrings
                      ScopedTypeVariables
                      TupleSections
  ghc-options:        -Wall -fno-warn-unused-do-bind
