name:                 hot-instances-src
version:              0.2.0
build-type:           Simple
cabal-version:        >= 1.10

executable generate
  hs-source-dirs:     src
  main-is:            Generate.hs
  other-modules:
  build-depends:      base,
                      do-list
  default-language:   Haskell2010
  default-extensions: OverloadedStrings
  ghc-options:        -Wall -fno-warn-unused-do-bind
