name:                 hot-instances
version:              0.1.0
build-type:           Simple
cabal-version:        >= 1.10

library
  hs-source-dirs:     .
  exposed-modules:    Data.Hot.Instances
  build-depends:      base,
                      hot-base
  default-language:   Haskell2010
  default-extensions: DataKinds
                      FlexibleInstances
                      LambdaCase
  other-extensions:   TypeFamilies
  ghc-options:        -Wall
