name:                   hot-instances
version:                0.2.0
build-type:             Simple
cabal-version:          >= 1.10

library
    hs-source-dirs:     .
    exposed-modules:    Data.Hot.Instances
    other-modules:      Data.Hot.Instances.Base
                        Data.Hot.Instances.Foldable
    build-depends:      base,
                        hot-base
    default-language:   Haskell2010
    default-extensions: DataKinds
                        FlexibleInstances
                        LambdaCase
    other-extensions:   TypeFamilies
    ghc-options:        -O2 -Wall
