name:                 hot-classy
version:              0.1.0
build-type:           Simple
cabal-version:        >= 1.10

library
  hs-source-dirs:     .
  exposed-modules:    Data.Hot.Pidgin
                      Data.Hot.Pidgin.Base
                      Data.Hot.Pidgin.Misc
  build-depends:      base,
                      hot-base,
                      hot-instances
  default-language:   Haskell2010
  default-extensions: BangPatterns
                      DataKinds
                      FlexibleContexts
                      FlexibleInstances
                      LambdaCase
                      MultiParamTypeClasses
                      MultiWayIf
                      ScopedTypeVariables
                      TupleSections
                      TypeOperators
  other-extensions:   InstanceSigs
                      TypeFamilies
                      UndecidableInstances
  ghc-options:        -O2 -Wall

test-suite hot-classy-test
  type:               exitcode-stdio-1.0
  hs-source-dirs:     ../../test
  main-is:            PidginProp.hs
  build-depends:      base,
                      hot-classy,
                      QuickCheck
  default-language:   Haskell2010
  default-extensions: DataKinds
                      FlexibleContexts
                      ScopedTypeVariables
  other-extensions:   KindSignatures
                      TypeFamilies
  ghc-options:        -O2 -Wall