name:                 hot-default
version:              0.1.0
build-type:           Simple
cabal-version:        >= 1.10

library
  hs-source-dirs:     .
  exposed-modules:    Data.Hot
                      Data.Hot.Generic
                      Data.Hot.Iterator
                      Data.Hot.Sort
  build-depends:      base,
                      hot-base,
                      hot-instances
  default-language:   Haskell2010
  default-extensions: BangPatterns
                      DataKinds
                      FlexibleContexts
                      FlexibleInstances
                      LambdaCase
                      MultiParamTypeClasses
                      MultiWayIf
                      ScopedTypeVariables
                      TupleSections
                      TypeOperators
  other-extensions:   InstanceSigs
                      TypeFamilies
                      UndecidableInstances
  ghc-options:        -Wall
