name:                 hot-indexed
version:              0.1.0
build-type:           Simple
cabal-version:        >= 1.10

library
  hs-source-dirs:     .
                      ../common
  exposed-modules:    Data.Hot
                      Data.Hot.Generic
                      Data.Hot.Sort
  build-depends:      base,
                      hot-base,
                      hot-instances
  default-language:   Haskell2010
  default-extensions: BangPatterns
                      DataKinds
                      FlexibleContexts
                      FlexibleInstances
                      LambdaCase
                      MultiParamTypeClasses
                      MultiWayIf
                      ScopedTypeVariables
                      TupleSections
                      TypeOperators
  other-extensions:   InstanceSigs
                      TypeFamilies
                      UndecidableInstances
  ghc-options:        -O2 -Wall

test-suite hot-indexed-test
  type:               exitcode-stdio-1.0
  hs-source-dirs:     ../../test
  main-is:            Unit.hs
  build-depends:      base,
                      hot-indexed,
                      hspec
  default-language:   Haskell2010
  default-extensions: DataKinds
  ghc-options:        -Wall